tdf#150769 sw floattable: fix lost PageDescName if section starts with a table

The bugdoc has 2 tables in it, separated by a section break (next page).
This page break was missing in Writer, so the tables overlapped.

The page break was lost because the 2nd section started with a table,
where we insert a dummy initial paragraph (to side-step the problem that
you can't have a selection starting in a table and finishing outside
that table), and once it's disposed, its properties are lost.

Fix the problem by copying the PageDescName property from the dummy
paragraph to the next paragraph before dispose. Note that we need this
combination of creating a range (using gotoNextParagraph()) and then
enumerate over the range, because gotoNextParagraph() would skip a
leading non-floating table, which would lead to an additional, not
wanted page break, as pointed out by CppunitTest_sw_ooxmlexport15's
testTdf134649_pageBreak.

This went wrong in ce5f82dbaf1c22f45a08c60eb213bc9bc821c1d1 (DOCX
import: floating table with negative top margin has to be a fly frame,
2022-01-21), and it turns out to be related to normal floating tables,
unrelated to multi-page floating tables.

(cherry picked from commit 2a380dba73d57f825128fbada91c7a9fe79e8a06)

Change-Id: I83245c78c63ec8f3d6015ce3e72ab232220a9fdb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152476
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>